[package]
name = "spano"
version = "0.3.0"
edition = "2021"


[lib]
name = "spano"
crate-type = ["cdylib", "lib"]
# See https://github.com/rust-lang/cargo/issues/12260


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
conv = "0.3.3"
image = "0.24.9"
imageproc = "0.23.0"
indicatif = "0.17.8"
itertools = "0.12.1"
ndarray = { version = "0.15.6", features = ["approx-0_5", "rayon", "matrixmultiply-threading"] }
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"]}
num-traits = "0.2.19"
rayon = "1.10.0"
tempfile = "3.10.1"
approx = "0.5.1"
ndarray-interp = "0.4.1"
serde_json = "1.0.117"
heapless = "0.8.0"

# When developing locally you can use a local copy of dependencies like so:
# photoncube2video = { path = "../photoncube2video" }
photoncube2video = { git = "https://github.com/WISION-Lab/photoncube2video" }

# Pin pyo3 to 0.15.2 as it's the last version to support py36, see: https://github.com/PyO3/maturin/pull/945
pyo3 = { version = "0.15.2", features = ["extension-module", "anyhow", "abi3-py36"] }

strum_macros = "0.26.2"
strum = { version = "0.26.2", features = ["derive"] }
numpy = "0.15.1"
cached = "0.49.3"
burn = { version = "0.13.2", features = ["wgpu", "autotune", "template", "fusion"] }
bytemuck = "1.16.0"
burn-tensor = "0.13.2"
derive-new = "0.6.0"
burn-jit = "0.13.2"
burn-ndarray = "0.13.2"
derive_more = "0.99.17"


[package.metadata.cargo-machete]
ignored = ["strum"]


[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }


[profile.release-with-debug]
inherits = "release"
debug-assertions = true


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "benchmarks"
harness = false
