[package]
name = "spano"
version = "0.3.7"
edition = "2021"


[lib]
name = "spano"
crate-type = ["cdylib", "lib"]
# See https://github.com/rust-lang/cargo/issues/12260


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
conv = "0.3.3"
image = "0.25.4"
imageproc = "0.25.0"
indicatif = "0.17.8"
itertools = "0.14.0"
ndarray = { version = "0.16.1", features = ["approx", "rayon", "blas"] }
blas-src = { version = "0.11.1", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-linalg = { version = "0.17.0", features = ["intel-mkl-static"]}
num-traits = "0.2.19"
rayon = "1.10.0"
tempfile = "3.10.1"
approx = "0.5.1"
ndarray-interp = "0.5.0"
serde_json = "1.0.120"
heapless = "0.8.0"

# When developing locally you can use a local copy of dependencies like so:
# photoncube = { path = "../photoncube" }
photoncube = { git = "https://github.com/WISION-Lab/photoncube", tag="v0.3.16" }

pyo3 = { version = "0.25.1", features = ["extension-module", "anyhow"] }
strum_macros = "0.27.1"
strum = { version = "0.27.1", features = ["derive"] }
numpy = "0.25.0"
cached = "0.55.1"
ndarray-ndimage = "0.5.0"


[package.metadata.cargo-machete]
ignored = ["strum"]


[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }


[profile.release-with-debug]
inherits = "release"
debug-assertions = true


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "benchmarks"
harness = false
