[build-system]
requires = ["maturin>=0.12.2,<2.0"]
build-backend = "maturin"

[project]
name = "spano"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "typing_extensions",
    "numpy",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "imageio",
    "invoke",
    "streamlit",
    "streamlit-image-comparison",
    "natsort",
    "ruff"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[project.scripts]
spano = "spano:cli_entrypoint"
